--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -1,115 +1,70 @@
-/* リセットCSS */
-body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-button {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    vertical-align: middle;
-    border: 0;
-    background: transparent;
-    outline: 0;
-    border-radius: 0;
-    text-align: inherit;
-}
-
-button:hover {
-    cursor: pointer;
-}
-
-/**************** 以下、ハンバーガーボタンのスタイリング ****************/
-.btn {
-    /* ボタンの大きさ  */
+.header__menu--button {
     width: 40px;
     height: 35px;
-    /* バーガーの線をボタン範囲の中心に配置 */
     display: flex;
     justify-content: center;
     align-items: center;
-    /* 最前面に */
     z-index: 10;
     transition: all 0.15s linear;
     background-color: #345efd;
     border-radius: 8px;
     box-shadow: 2px 2px 5px gray;
-    
 }
 
-/***** 真ん中のバーガー線 *****/
-.btn-line {
-    /* 線の長さと高さ */
+.header__menu--button-line {
     width: 35px;
     height: 2px;
-    /* バーガー線の色 */
     background-color: #fdfdfd;
-    /* バーガー線の位置基準として設定 */
     position: relative;
-    transition: .2s;
+    transition: 0.2s;
 }
 
-/***** 上下のバーガー線 *****/
-.btn-line::before {
-    /* 空の擬似要素 */
+.header__menu--button-line::before {
     content: "";
-    /* 基準線と同じ大きさと色 */
     position: absolute;
     width: 60%;
     height: 100%;
     background-color: #fdfdfd;
-    transition: .2s;
+    transition: 0.2s;
 }
 
-.btn-line::after {
-    /* 空の擬似要素 */
+.header__menu--button-line::after {
     content: "";
-    /* 基準線と同じ大きさと色 */
     position: absolute;
     width: 30%;
     height: 100%;
     background-color: #fdfdfd;
-    transition: .2s;
+    transition: 0.2s;
 }
 
-
-.btn-line::before {
-    /* 上の線の位置 */
+.header__menu--button-line::before {
     transform: translateY(-8px);
 }
 
-
-.btn-line::after {
-    /* 下の線の位置 */
+.header__menu--button-line::after {
     transform: translateY(8px);
 }
 
-/***** メニューオープン時 *****/
-.btn-line.open {
-    /* 真ん中の線を透明に */
+.header__menu--button-line.open {
     background-color: transparent;
 }
 
-.btn-line.open::before,
-.btn-line.open::after {
-    transition: .2s;
+.header__menu--button-line.open::before,
+.header__menu--button-line.open::after {
+    transition: 0.2s;
 }
 
-.btn-line.open::before {
-    /* 上の線を傾ける */
+.header__menu--button-line.open::before {
     width: 100%;
     transform: rotate(45deg);
 }
 
-.btn-line.open::after {
-    /* 下の線を傾ける */
+.header__menu--button-line.open::after {
     width: 100%;
     transform: rotate(-45deg);
 }
 
-.btn.open {
+.header__menu--button.open {
     transition: all 0.15s linear;
     background-color: #345efd;
     border-radius: 8px;
@@ -120,55 +75,47 @@ button:hover {
     box-shadow: 2px 2px 5px gray;
 }
 
-/**************** ここまで、ハンバーガーボタンのスタイリング ****************/
-
-/**************** 以下、メニューのスタイリング ****************/
 .menu {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    /*  メニューを非表示に  */
     visibility: hidden;
     opacity: 0;
-    transition: opacity .5s;
-    /* メニューを縦に */
+    transition: opacity 0.5s;
     display: flex;
     align-items: center;
     flex-direction: column;
-    background-color:#fdfdfd;
+    background-color: #fdfdfd;
 }
 
 .menu-list {
     width: 100%;
     height: 50px;
-    /* メニューテキスト位置をリスト内中心に */
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-a {
+.menu-text {
     text-decoration: none;
     font-weight: bold;
     color: #345efd;
     font-weight: bold;
     font-size: 25px;
-
 }
 
 .menu-list:hover {
-    background-color:#d5dcf3;
-    transition: .3s;
+    background-color: #d5dcf3;
+    transition: 0.3s;
     cursor: pointer;
 }
 
 .menu.open {
-    /*   transition: visibility 1s ease-in; */
     visibility: visible;
     opacity: 1;
-    transition: opacity .5s;
+    transition: opacity 0.5s;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
@@ -183,7 +130,6 @@ a {
     padding: 20px 15px;
     max-width: 1230px;
     display: flex;
-
 }
 
 .header__menu {
@@ -201,10 +147,6 @@ a {
     margin: 2px 0px -16px 15px;
 }
 
-
-/*  プレースホルダーの設定*/
-
-/*色を不透明化するとメニュー表示の際にプレースホルダーの文字が消える */
 ::-webkit-input-placeholder {
     opacity: 1;
 }
@@ -221,7 +163,6 @@ a {
     opacity: 1;
 }
 
-/*クリックした際にプレースホルダーの文字が消える */
 input:focus::-webkit-input-placeholder {
     color: transparent;
 }
