--- a/src/public/css/common_home.css
+++ b/src/public/css/common_home.css
@@ -1,36 +1,9 @@
-/* リセットCSS */
-body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-button {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    vertical-align: middle;
-    border: 0;
-    background: transparent;
-    outline: 0;
-    border-radius: 0;
-    text-align: inherit;
-}
-
-button:hover {
-    cursor: pointer;
-}
-
-/**************** 以下、ハンバーガーボタンのスタイリング ****************/
-.btn {
-    /* ボタンの大きさ  */
+.header__menu--button {
     width: 40px;
     height: 35px;
-    /* バーガーの線をボタン範囲の中心に配置 */
     display: flex;
     justify-content: center;
     align-items: center;
-    /* 最前面に */
     z-index: 10;
     transition: all 0.15s linear;
     background-color: #345efd;
@@ -38,23 +11,16 @@ button:hover {
     box-shadow: 2px 2px 5px gray;
 }
 
-/***** 真ん中のバーガー線 *****/
-.btn-line {
-    /* 線の長さと高さ */
+.header__menu--button-line {
     width: 35px;
     height: 2px;
-    /* バーガー線の色 */
     background-color: #fdfdfd;
-    /* バーガー線の位置基準として設定 */
     position: relative;
     transition: 0.2s;
 }
 
-/***** 上下のバーガー線 *****/
-.btn-line::before {
-    /* 空の擬似要素 */
+.header__menu--button-line::before {
     content: "";
-    /* 基準線と同じ大きさと色 */
     position: absolute;
     width: 60%;
     height: 100%;
@@ -62,10 +28,8 @@ button:hover {
     transition: 0.2s;
 }
 
-.btn-line::after {
-    /* 空の擬似要素 */
+.header__menu--button-line::after {
     content: "";
-    /* 基準線と同じ大きさと色 */
     position: absolute;
     width: 30%;
     height: 100%;
@@ -73,40 +37,34 @@ button:hover {
     transition: 0.2s;
 }
 
-.btn-line::before {
-    /* 上の線の位置 */
+.header__menu--button-line::before {
     transform: translateY(-8px);
 }
 
-.btn-line::after {
-    /* 下の線の位置 */
+.header__menu--button-line::after {
     transform: translateY(8px);
 }
 
-/***** メニューオープン時 *****/
-.btn-line.open {
-    /* 真ん中の線を透明に */
+.header__menu--button-line.open {
     background-color: transparent;
 }
 
-.btn-line.open::before,
-.btn-line.open::after {
+.header__menu--button-line.open::before,
+.header__menu--button-line.open::after {
     transition: 0.2s;
 }
 
-.btn-line.open::before {
-    /* 上の線を傾ける */
+.header__menu--button-line.open::before {
     width: 100%;
     transform: rotate(45deg);
 }
 
-.btn-line.open::after {
-    /* 下の線を傾ける */
+.header__menu--button-line.open::after {
     width: 100%;
     transform: rotate(-45deg);
 }
 
-.btn.open {
+.header__menu--button.open {
     transition: all 0.15s linear;
     background-color: #345efd;
     border-radius: 8px;
@@ -117,20 +75,15 @@ button:hover {
     box-shadow: 2px 2px 5px gray;
 }
 
-/**************** ここまで、ハンバーガーボタンのスタイリング ****************/
-
-/**************** 以下、メニューのスタイリング ****************/
 .menu {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    /*  メニューを非表示に  */
     visibility: hidden;
     opacity: 0;
     transition: opacity 0.5s;
-    /* メニューを縦に */
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -140,13 +93,12 @@ button:hover {
 .menu-list {
     width: 100%;
     height: 50px;
-    /* メニューテキスト位置をリスト内中心に */
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-a {
+.menu-text {
     text-decoration: none;
     font-weight: bold;
     color: #345efd;
@@ -161,7 +113,6 @@ a {
 }
 
 .menu.open {
-    /*   transition: visibility 1s ease-in; */
     visibility: visible;
     opacity: 1;
     transition: opacity 0.5s;
@@ -196,9 +147,6 @@ a {
     margin: 2px 0px -16px 15px;
 }
 
-/*  プレースホルダーの設定*/
-
-/*色を不透明化するとメニュー表示の際にプレースホルダーの文字が消える */
 ::-webkit-input-placeholder {
     opacity: 1;
 }
@@ -215,7 +163,6 @@ a {
     opacity: 1;
 }
 
-/*クリックした際にプレースホルダーの文字が消える */
 input:focus::-webkit-input-placeholder {
     color: transparent;
 }
@@ -249,11 +196,11 @@ input:focus::placeholder {
     flex-direction: row;
 }
 
-.search_box {
+.header__search--box {
     display: flex;
 }
 
-.search_button {
+.search-button {
     position: relative;
     width: 30px;
     height: 35px;
@@ -267,7 +214,7 @@ input:focus::placeholder {
     height: 35px;
 }
 
-.icon_search {
+.icon-search {
     position: absolute;
     margin: 10px 5px 0px 10px;
     width: 15px;
@@ -277,7 +224,7 @@ input:focus::placeholder {
     pointer-events: none;
 }
 
-.search_text {
+.search-text {
     margin-top: 5px;
     margin-left: 3px;
     padding-left: 5px;
@@ -289,13 +236,13 @@ input:focus::placeholder {
     vertical-align: center;
 }
 
-.search_area {
+.search-area {
     position: relative;
     display: flex;
     align-items: center;
 }
 
-.search_area::before {
+.search-area::before {
     content: "";
     width: 0;
     height: 0;
@@ -309,7 +256,7 @@ input:focus::placeholder {
     pointer-events: none;
 }
 
-.select_area {
+.select-area {
     margin-left: 8px;
     padding-left: 5px;
     background-color: #fff;
@@ -322,7 +269,7 @@ input:focus::placeholder {
     vertical-align: center;
 }
 
-.select_area::-ms-expand {
+.select-area::-ms-expand {
     margin-left: 8px;
     padding-left: 5px;
     background-color: #fff;
@@ -333,13 +280,13 @@ input:focus::placeholder {
     display: none;
 }
 
-.search_genre {
+.search-genre {
     position: relative;
     display: flex;
     align-items: center;
 }
 
-.search_genre::before {
+.search-genre::before {
     content: "";
     width: 0;
     height: 0;
@@ -353,7 +300,7 @@ input:focus::placeholder {
     pointer-events: none;
 }
 
-.select_genre {
+.select-genre {
     margin-left: 8px;
     padding-left: 5px;
     background-color: #fff;
@@ -366,7 +313,7 @@ input:focus::placeholder {
     vertical-align: center;
 }
 
-.select_genre::-ms-expand {
+.select-genre::-ms-expand {
     margin-left: 8px;
     padding-left: 5px;
     background-color: #fff;
