--- a/src/public/css/done.css
+++ b/src/public/css/done.css
@@ -1,9 +1,5 @@
-main{
-    margin-top:50px;
-}
-
 .done__content {
-    margin: 0 auto;
+    margin: 75px auto;
     width: 400px;
     display: flex;
     flex-direction: column;
@@ -15,14 +11,14 @@ main{
     margin: 0 auto;
     height: 100px;
     width: 400px;
-    background-color:#fff;
-    color:black;
+    background-color: #fff;
+    color: black;
     font-size: 20px;
     font-weight: bold;
     border-radius: 5px 5px 0px 0px;
     display: flex;
     justify-content: center;
-    align-items: flex-end;    
+    align-items: flex-end;
 }
 
 .done__form {
@@ -36,16 +32,19 @@ main{
 .form__button {
     margin-top: 30px;
     text-align: center;
-
 }
 
-.form__button-submit {
+.form__button--submit {
     width: 100px;
     height: 30px;
     border: none;
     border-radius: 5px;
     background-color: #345efd;
+    cursor: pointer;
+}
+
+.form__button--text {
+    margin: 0 auto;
     color: #fff;
     text-align: center;
-    cursor: pointer;
 }
