--- a/src/public/css/register.css
+++ b/src/public/css/register.css
@@ -2,6 +2,7 @@
     height: 100px;
     padding-top: 40px;
 }
+
 .alert {
     height: 40px;
     padding-top: 10px;
@@ -52,24 +53,24 @@
     display: flex;
 }
 
-.form__group-icon {
+.form__group--icon {
     height: 40px;
     width: 40px;
 }
 
-.icon_name {
+.icon-name {
     width: 20px;
     height: 25px;
     margin-top: 3px;
 }
 
-.icon_mail {
+.icon-mail {
     width: 25px;
     height: 20px;
     margin-top: 8px;
 }
 
-.icon_key {
+.icon-key {
     width: 20px;
     height: 25px;
     margin-top: 3px;
@@ -97,13 +98,17 @@
     text-align: right;
 }
 
-.form__button-submit {
+.form__button--submit {
     width: 80px;
     height: 30px;
     border: none;
     border-radius: 5px;
     background-color: #345efd;
+    cursor: pointer;
+}
+
+.form__button--text {
+    margin: 0 auto;
     color: #fff;
     text-align: center;
-    cursor: pointer;
 }
