--- a/src/public/css/thanks.css
+++ b/src/public/css/thanks.css
@@ -1,30 +1,24 @@
-main{
-    margin-top:50px;
-}
-
 .thanks__content {
-    margin: 0 auto;
+    margin: 75px auto;
     width: 400px;
     display: flex;
     flex-direction: column;
     border-radius: 10px;
     box-shadow: 2px 2px 5px gray;
-
 }
 
 .thanks__text {
     margin: 0 auto;
     height: 100px;
     width: 400px;
-    background-color:#fff;
-    color:black;
+    background-color: #fff;
+    color: black;
     font-size: 20px;
     font-weight: bold;
     border-radius: 5px 5px 0px 0px;
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    
 }
 
 .thanks__form {
@@ -38,16 +32,19 @@ main{
 .form__button {
     margin-top: 30px;
     text-align: center;
-
 }
 
-.form__button-submit {
+.form__button--submit {
     width: 100px;
     height: 30px;
     border: none;
     border-radius: 5px;
     background-color: #345efd;
+    cursor: pointer;
+}
+
+.form__button--text {
+    margin: 0 auto;
     color: #fff;
     text-align: center;
-    cursor: pointer;
 }
