--- a/src/public/css/mypage.css
+++ b/src/public/css/mypage.css
@@ -11,7 +11,20 @@
     justify-content: center;
 }
 
-.alert {
+.alert__content {
+    height: 50px;
+}
+
+.alert__content--success {
+    height: 40px;
+    padding-top: 10px;
+    text-align: center;
+    border-color: #badbcc;
+    background-color: #d1e7dd;
+    color: #0f5132;
+}
+
+.alert__content--error {
     height: 40px;
     padding-top: 10px;
     text-align: center;
@@ -273,7 +286,6 @@
     position: relative;
     margin: 0px 0px 0px 55px;
 }
-
 
 .review-read-button {
     font-size: 43px;
