--- a/src/public/css/change.css
+++ b/src/public/css/change.css
@@ -39,8 +39,8 @@
 }
 
 .change__shop-img img {
-    width: 85%;
-    height: 85%;
+    width: 530px;
+    height: 350px;
 }
 
 .change__shop-tag {
@@ -58,7 +58,7 @@
 }
 
 .change__shop-text {
-    width: 85%;
+    width: 525px;
     font-size: 15px;
     font-weight: bold;
     margin-top: 10px;
@@ -101,7 +101,7 @@
 }
 
 .input-date {
-    font-family: "Nunito", sans-serif;
+    font-family: "Arial", sans-serif;
     border-radius: 3px;
     width: 150px;
     height: 25px;
@@ -187,7 +187,6 @@
     border-radius: 0px 0px 8px 8px;
 }
 
-
 .select-time {
     position: relative;
     display: flex;
@@ -230,7 +229,7 @@
 
 .form__error {
     height: 15px;
-    color: #FFF;
+    color: #fff;
     text-align: left;
     font-size: 15px;
 }
