--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -1,4 +1,8 @@
-.alert {
+.alert__content {
+    height: 50px;
+}
+
+.alert__content--error {
     height: 40px;
     padding-top: 10px;
     text-align: center;
@@ -6,7 +10,6 @@
     background-color: #f8d7da;
     color: #842029;
 }
-
 
 .home__content {
     margin: 0 auto;
